spelling fixes on text.  Changed out wonder 4 for 6
Size of wonder 4 jpg was too big to load in time.

--- a/Module 6/SpaceTravel/SpaceTravelStyleSheet.css
+++ b/Module 6/SpaceTravel/SpaceTravelStyleSheet.css
@@ -181,7 +181,7 @@
         height: inherit;
         left: -1000px;
         top: -500px;
-        background-image: url("images/Wonder4.jpg");
+        background-image: url("images/Wonder6.jpg");
         background-position: center;
         opacity: 0;
     }
